--- a/.github/ISSUE_TEMPLATE/cogupdate.yml
+++ b/.github/ISSUE_TEMPLATE/cogupdate.yml
@@ -1,5 +1,5 @@
 description: "File a cog update. Not really for regular users, so ignore this."
-labels: ["cog-updates"]
+labels: ["good first issue"]
 name: "Cog Updates!"
 assignees: JeffJrShim
 body:
